[gd_scene load_steps=3 format=2]

[ext_resource path="res://Other/UI/ScreenText.gd" type="Script" id=1]
[ext_resource path="res://Other/UI/BaseFont.tres" type="DynamicFont" id=2]

[node name="TextDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleText" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "hi buddy <3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleTextTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="UpperText" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 2 )
text = "yoooo!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpperTextTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true
